<resources>
    <string name="app_name">Cloud Territory</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_string">Home</string>
    <string name="assign">Assign</string>
    <string name="event_track">Event Log</string>
    <string name="watch">My List</string>
    <string name="add_address">Add new address</string>
    <string name="logout">Logout</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="addMessageOptions_array">
        <item>Talked to the householder.</item>
        <item>Not at home.</item>
        <item>Moved out.</item>
        <item>Return visit.</item>
        <item>Conducted a bible study.</item>
    </string-array>
    <string name="title_activity_login">Login</string>

</resources>
