<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/my_id">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/home_string" />
        <item
            android:id="@+id/watch"
            android:checked="false"
            android:icon="@drawable/ic_watch"
            android:title="@string/watch" />
        <item
            android:id="@+id/add_address"
            android:checked="false"
            android:icon="@drawable/ic_addnew"
            android:title="@string/add_address" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/adm_menu">
        <item
            android:id="@+id/assign"
            android:checked="false"
            android:icon="@drawable/ic_assign"
            android:title="@string/assign" />
        <item
            android:id="@+id/event_track"
            android:checked="false"
            android:title="@string/event_track" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/my_id2">
        <item
            android:id="@+id/lougout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>


</menu>